# Simple-Compiler

./: .gitignore  README.md  dune-project
C++/: CMakeLists.txt
C++/src/: compiler.cpp  interp.cpp
C++/test/: test.cpp  testExpr.cpp
OCaml/: PL_play.opam
OCaml/interpreter/: interp1.ml
OCaml/test/: dune  testCompile0.ml
_build/: .db  .digest-db  log
_build/default/: PL_play.dune-package  PL_play.install
_build/default/.dune/: configurator  configurator.v2
_build/default/interpreter/: interp.ml  interpreter.cma  interpreter.cmxa  interpreter.cmxs  interpreter.ml-gen
_build/default/interpreter/.interpreter.objs/byte/: interpreter.cmi  interpreter.cmo  interpreter.cmt  interpreter__Interp.cmi  interpreter__Interp.cmo  interpreter__Interp.cmt
_build/default/interpreter/.interpreter.objs/native/: interpreter.cmx  interpreter__Interp.cmx
_build/default/interpreter/.merlin-conf/: lib-interpreter
_build/default/test/.PL_play.eobjs/byte/: dune__exe__PL_play.cmi  dune__exe__PL_play.cmti
_build/default/test/.PL_play.eobjs/native/: dune__exe__PL_play.cmx
_build/default/test/.merlin-conf/: exe-PL_play
_build/install/default/lib/PL_play/: META  dune-package  opam
coqProof/: lower.v
interpreter/: dune  interp.ml  interp0.ml  interp1.ml  interp2.ml
test/: dune  testCompile.ml  testExpr1.ml  testInstruction.ml  testInstruction0.ml  testInstructionCompile.ml  testlower.ml
